// https://dbdiagram.io/d/apidb-69bb4528fb2db18e3bb5109d
// ============================================================
//  MOVIES
// ============================================================

Table movies {
  id            uuid         [pk, default: `gen_random_uuid()`]
  title         varchar(300) [not null]
  description   text
  duration_mins int
  rating        varchar(10)
  genre         text[]
  poster_url    text
  trailer_url   text
  status        movie_status [not null, default: 'coming_soon']
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz  [not null, default: `now()`]
}

// ============================================================
//  SCREENS & SEATS
// ============================================================

Table screens {
  id          uuid         [pk, default: `gen_random_uuid()`]
  name        varchar(100) [not null]
  screen_type screen_type  [not null, default: 'standard']
  is_active   boolean      [not null, default: true]
}

Table seats {
  id          uuid       [pk, default: `gen_random_uuid()`]
  screen_id   uuid       [not null, ref: > screens.id]
  row_label   varchar(5) [not null]
  seat_number int        [not null]
  seat_class  seat_class [not null, default: 'standard']
  is_active   boolean    [not null, default: true]

  indexes {
    (screen_id, row_label, seat_number) [unique]
  }
}

// ============================================================
//  SHOWTIMES
// ============================================================

Table showtimes {
  id           uuid         [pk, default: `gen_random_uuid()`]
  movie_id     uuid         [not null, ref: > movies.id]
  screen_id    uuid         [not null, ref: > screens.id]
  starts_at    timestamptz  [not null]
  ends_at      timestamptz  [not null]
  base_price   numeric(8,2) [not null]
  is_cancelled boolean      [not null, default: false]
  created_at   timestamptz  [not null, default: `now()`]

  indexes {
    (screen_id, starts_at) [unique]
  }
}

// ============================================================
//  ADD-ONS
// ============================================================

Table addons {
  id          uuid         [pk, default: `gen_random_uuid()`]
  name        varchar(100) [not null]
  description text
  price       numeric(8,2) [not null]
  image_url   text
  is_active   boolean      [not null, default: true]
  created_at  timestamptz  [not null, default: `now()`]
}

// ============================================================
//  BOOKINGS & TICKETS
// ============================================================

Table bookings {
  id             uuid           [pk, default: `gen_random_uuid()`]
  user_id        uuid           [not null]  // ref to auth api users.id
  showtime_id    uuid           [not null, ref: > showtimes.id]
  status         booking_status [not null, default: 'pending']
  tickets_cost   numeric(10,2)  [not null]
  addons_cost    numeric(10,2)  [not null, default: 0]
  total_cost     numeric(10,2)  [not null]
  confirmed_at   timestamptz
  cancelled_at   timestamptz
  created_at     timestamptz    [not null, default: `now()`]
  updated_at     timestamptz    [not null, default: `now()`]
}

Table tickets {
  id          uuid         [pk, default: `gen_random_uuid()`]
  booking_id  uuid         [not null, ref: > bookings.id]
  seat_id     uuid         [not null, ref: > seats.id]
  ticket_type ticket_type  [not null, default: 'adult']
  unit_price  numeric(8,2) [not null]
  qr_code     text         [unique]
  is_scanned  boolean      [not null, default: false]
  scanned_at  timestamptz

  indexes {
    (booking_id, seat_id) [unique]
  }
}

Table booking_addons {
  id         uuid         [pk, default: `gen_random_uuid()`]
  booking_id uuid         [not null, ref: > bookings.id]
  addon_id   uuid         [not null, ref: > addons.id]
  quantity   int          [not null, default: 1]
  unit_price numeric(8,2) [not null]
}

Table seat_holds {
  id          uuid        [pk, default: `gen_random_uuid()`]
  showtime_id uuid        [not null, ref: > showtimes.id]
  seat_id     uuid        [not null, ref: > seats.id]
  user_id     uuid        [not null]
  expires_at  timestamptz [not null]
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    (showtime_id, seat_id) [unique]
  }
}

// ============================================================
//  ENUMS
// ============================================================

Enum movie_status {
  coming_soon
  now_showing
  ended
}

Enum screen_type {
  standard
  imax
  vip
}

Enum seat_class {
  standard
  premium
  vip
}

Enum booking_status {
  pending
  confirmed
  cancelled
}

Enum ticket_type {
  adult
  child
  senior
}